# Flersensorsystem

./: CMakeLists.txt  Flersensorsystem.cpp  Flersensorsystem.sln  Flersensorsystem.vcxproj  Flersensorsystem.vcxproj.filters  README.md  main.cpp  measurement.cpp  measurement.h  measurement_storage.h  sensor.cpp  sensor.h  utilities.cpp  utilities.h
src/: measurement_storage.cpp  measurement_storage.h  menu.cpp  menu.h  sensor.cpp  sensor.h  statistics.cpp  statistics.h  utilities.cpp  utilities.h
